# doteph

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  build.rs  example.eph
.agents/skills/: readme.md
.agents/skills/names-are-not-type-safety/: SKILL.md
.agents/skills/names-are-not-type-safety/agents/: openai.yaml
.agents/skills/names-are-not-type-safety/references/: article-notes.md
.agents/skills/parse-dont-validate/: SKILL.md
.agents/skills/parse-dont-validate/agents/: openai.yaml
.agents/skills/parse-dont-validate/references/: article-notes.md
.agents/skills/rust100k-architecture-docs/: SKILL.md
.agents/skills/rust100k-architecture-docs/agents/: openai.yaml
.agents/skills/rust100k-architecture-docs/references/: article-notes.md
.agents/skills/rust100k-build-performance/: SKILL.md
.agents/skills/rust100k-build-performance/agents/: openai.yaml
.agents/skills/rust100k-build-performance/references/: article-notes.md
.agents/skills/rust100k-testing-discipline/: SKILL.md
.agents/skills/rust100k-testing-discipline/agents/: openai.yaml
.agents/skills/rust100k-testing-discipline/references/: article-notes.md
.agents/skills/using-eph/: SKILL.md
.claude/skills/using-eph/: SKILL.md
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  installers.yml  release.yml  security.yml  site.yml
docs/: design.md  format.md
docs/developer-guide/: README.md  architecture.md  building-and-testing.md  internals.md
docs/user-guide/: README.md  command-reference.md  concepts.md  eph-file.md  for-agents.md  getting-started.md  recipes.md  run-your-app.md  services.md  shell-integration.md  troubleshooting.md
scripts/: install.ps1  install.sh  setup-claude-env.sh
site/: README.md  astro.config.mjs  package-lock.json  package.json
site/src/: content.config.ts
site/src/components/: Agents.astro  Artifact.astro  Features.astro  Footer.astro  Hero.astro  HowItWorks.astro  Logo.astro  Nav.astro  Problem.astro
site/src/components/docs/: DocsHeader.astro  PageActions.astro  PrevNext.astro  Sidebar.astro
site/src/layouts/: Base.astro  Docs.astro
site/src/lib/: base-path.mjs  base.ts  guide.ts  rehype-doc-links.mjs
site/src/pages/: index.astro  llms-full.txt.ts  llms.txt.ts
site/src/pages/guide/: [slug].astro  [slug].md.ts  index.astro
site/src/styles/: docs.css  global.css  tokens.css
skills/using-eph/: SKILL.md
src/: env.rs  hooks.rs  lib.rs  main.rs  parser.rs  proc.rs  prune.rs  service.rs  skills.rs  system_prune.rs  update.rs  watch.rs  workspace.rs
tests/: integration.rs  stress.rs
tests/common/: mod.rs
tests/integration/: system_prune_force.rs  system_prune_hooks.rs
