[package]
name = "eph"
version = "0.1.0"
edition = "2024"
description = "Ephemeral services per workspace - dotenv for services"
license = "MIT"
authors = ["Jessica Black <me@jessica.black>"]
repository = "https://github.com/attunehq/doteph"
homepage = "https://github.com/attunehq/doteph"
readme = "README.md"
rust-version = "1.88"
keywords = ["docker", "services", "dotenv", "workspace", "devtools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
bollard = "0.21"
clap = { version = "4", features = ["derive"] }
dirs = "6"
futures-util = "0.3"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
shell-words = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

# Optimized release profile for the shipped `eph` binary. fat LTO plus a single
# codegen unit let the optimizer work across the whole crate graph, and strip
# drops symbols for a smaller binary. panic is left at the default "unwind":
# "abort" would change runtime/test panic behavior, and the binary is not
# performance- or size-critical enough to justify that surprise.
[profile.release]
lto = "fat"
codegen-units = 1
strip = true
