[package]
name = "eph"
# Versioning comes from the git tag (see build.rs / EPH_VERSION), not from this
# field. It is pinned to 0.0.0 to make clear the crate version is not the source
# of truth for releases.
version = "0.0.0"
edition = "2024"
description = "Ephemeral services per workspace - dotenv for services"
license = "MIT"
authors = ["Jessica Black <me@jessica.black>"]
repository = "https://github.com/attunehq/doteph"
homepage = "https://github.com/attunehq/doteph"
readme = "README.md"
rust-version = "1.88"
keywords = ["docker", "services", "dotenv", "workspace", "devtools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
bollard = "0.21"
clap = { version = "4", features = ["derive"] }
dirs = "6"
futures-util = "0.3"
hex = "0.4"
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
shell-words = "1"
# Native PID liveness + termination so `run=` services work without a POSIX
# `kill` (Windows has none). Only the process-inspection surface is needed, so
# the default features (disks, network, components, users) are turned off.
sysinfo = { version = "0.38", default-features = false, features = ["system"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Unix-only: tearing down a `run=` service signals the shell's whole process
# group (`killpg`), which sysinfo cannot express. libc is already in the tree
# transitively (sysinfo pulls it on Unix); this makes the direct use explicit.
# Windows needs nothing extra: it tears down by walking the descendant process
# tree via sysinfo, which is already a dependency.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
# Heavyweight stress tests (tests/stress.rs) open a real SQL connection to the
# postgres they start, over its mapped host port. redis (RESP) and minio (HTTP)
# are spoken over raw sockets and need no client crate; postgres's wire protocol
# does, so use the canonical async client. Dev-only: not linked into `eph`.
tokio-postgres = "0.7"

# Optimized release profile for the shipped `eph` binary. fat LTO plus a single
# codegen unit let the optimizer work across the whole crate graph, and strip
# drops symbols for a smaller binary. panic is left at the default "unwind":
# "abort" would change runtime/test panic behavior, and the binary is not
# performance- or size-critical enough to justify that surprise.
[profile.release]
lto = "fat"
codegen-units = 1
strip = true
