[package]
name = "eph"
# Versioning comes from the git tag (see build.rs / EPH_VERSION), not from this
# field. It is pinned to 0.0.0 to make clear the crate version is not the source
# of truth for releases.
version = "0.0.0"
edition = "2024"
description = "Ephemeral services per workspace - dotenv for services"
license = "MIT"
authors = ["Jessica Black <me@jessica.black>"]
repository = "https://github.com/attunehq/doteph"
homepage = "https://github.com/attunehq/doteph"
readme = "README.md"
rust-version = "1.88"
keywords = ["docker", "services", "dotenv", "workspace", "devtools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
bollard = "0.21"
clap = { version = "4", features = ["derive"] }
dirs = "6"
# Canonicalizing a workspace path with std on Windows yields the extended-length
# `\\?\C:\...` form. Docker's Windows volume parser rejects that as a bind-mount
# source, and it also leaks into display output. dunce::canonicalize returns a
# plain `C:\...` path whenever one exists (the common case), keeping the verbatim
# prefix only for paths that genuinely require it. On Unix it is std::fs::canonicalize.
dunce = "1"
# Cross-platform OS advisory file locks (flock / LockFileEx) guarding the
# per-workspace state file and `eph system prune` against concurrent runs. An
# OS lock releases automatically when the holding process dies, so a crashed
# command can never wedge the next one the way a create-new lock file can.
fd-lock = "4"
# `eph update` unpacks the release `.tar.gz`. flate2's default `miniz_oxide`
# backend is pure Rust (no zlib/C), so the updater adds no system dependency and
# keeps every cross target building as cleanly as the rest of eph does.
flate2 = "1"
futures-util = "0.3"
# `eph dev --watch` compiles the user's globs into a matcher and watches the
# workspace tree for changes: globset for gitignore-style glob matching, notify
# for the cross-platform filesystem watch (inotify / FSEvents / ReadDirectoryChangesW).
globset = "0.4"
hex = "0.4"
indexmap = { version = "2", features = ["serde"] }
notify = "8"
# `eph update` swaps the running binary for a freshly downloaded release. A live
# executable cannot simply be overwritten on Windows; self-replace encapsulates
# the platform split (an atomic rename on Unix, the move-aside-and-clean-up dance
# on Windows) so the updater does not hand-roll it.
self-replace = "1"
# Compare the running version against the latest release tag in `eph update`.
# eph tags are `vX.Y.Z`; dev builds carry a `git describe` suffix that is not a
# clean release, so the updater parses with semver and treats anything else as a
# development build to reinstall.
semver = "1"
serde = { version = "1", features = ["derive"] }
# `preserve_order` keeps `serde_json::Map` insertion-ordered, so `eph env
# --format json` prints keys in the `.eph` file's declaration order instead of
# an arbitrary hash order.
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.11"
shell-words = "1"
# `eph dev` reopens the preview `$PORT` gate on every bring-up, so a `--watch`
# restart rebinds the same fixed port right after the old gate was torn down.
# tokio's default listener does not set SO_REUSEADDR (mio omits it on Windows),
# which makes that rebind race the old connections' lingering sockets. socket2
# builds the gate listener with SO_REUSEADDR so the rebind is race-free.
socket2 = "0.6"
# Native PID liveness + termination so `run=` services work without a POSIX
# `kill` (Windows has none). Only the process-inspection surface is needed, so
# the default features (disks, network, components, users) are turned off.
sysinfo = { version = "0.38", default-features = false, features = ["system"] }
# `eph update` stages the downloaded binary in a temp file before self-replace
# swaps it over the running executable, and unit tests build throwaway archives.
tempfile = "3"
# `eph update` unpacks the `eph` binary out of the release tarball's
# `eph-<target>/` directory. Pure Rust, so it adds no system dependency.
tar = "0.4"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# HTTPS client for `eph update`: fetch the GitHub release metadata, archive, and
# checksums. Its defaults (rustls + ring + webpki/Mozilla roots) are all
# statically linked and vendor their own trust store, so the updater needs no
# system OpenSSL and no system certificate store: every cross target keeps
# building with no system dependencies, and a musl/scratch binary can still
# verify GitHub's certificate.
ureq = "3"

# Unix-only: tearing down a `run=` service signals the shell's whole process
# group (`killpg`), which sysinfo cannot express. libc is already in the tree
# transitively (sysinfo pulls it on Unix); this makes the direct use explicit.
# Windows needs nothing extra: it tears down by walking the descendant process
# tree via sysinfo, which is already a dependency.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
# Heavyweight stress tests (tests/stress.rs) open a real SQL connection to the
# postgres they start, over its mapped host port. redis (RESP) and minio (HTTP)
# are spoken over raw sockets and need no client crate; postgres's wire protocol
# does, so use the canonical async client. Dev-only: not linked into `eph`.
tokio-postgres = "0.7"

# Optimized release profile for the shipped `eph` binary. fat LTO plus a single
# codegen unit let the optimizer work across the whole crate graph, and strip
# drops symbols for a smaller binary. panic is left at the default "unwind":
# "abort" would change runtime/test panic behavior, and the binary is not
# performance- or size-critical enough to justify that surprise.
[profile.release]
lto = "fat"
codegen-units = 1
strip = true
